# main-website

./: .gitignore  backup.sql  create_table.sql  docker-compose.yml
adcs-backend/: .dockerignore  .env  .gitignore  api_docs_analyze_document.md  dockerfile  pyproject.toml  requirements.txt
adcs-backend/app/: main.py  sync_department.py  sync_human_resources.py  test.py
adcs-backend/app/api/v1/endpoints/: auth.py  department.py  document.py  documents.py  history.py  role_permission.py  system_parameter.py  telegram.py  telegram_webhook.py  translation.py  user.py  users.py
adcs-backend/app/core/: dependency.py  document_websocket.py  http_client.py  logger.py  security.py
adcs-backend/app/crud/: department.py  document.py  role_permisson.py  system_parameter.py  translation.py  user.py
adcs-backend/app/db/: session.py
adcs-backend/app/models/: department.py  document.py  human_resource.py  role_permission.py  system_parameter.py  telegram_bot.py  translation.py  user.py
adcs-backend/app/schemas/: auth.py  department.py  document.py  role_permission.py  telegram.py  translation.py  user.py
adcs-backend/app/services/: auth_service.py  department_service.py  document_service.py  history_service.py  role_permission.py  system_parameter.py  telegram_service.py  translation_service.py  user_service.py
adcs-backend/app/utils/: document_websocket.py  file_handler.py
adcs-backend/uploads/: c7bfbde5-d542-4391-9ea4-c2f197b2564d.txt
adcs-frontend/: .env  .gitignore  dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+33 files in other folders)
